[project]
name = "flet-image-gallery-saver"
version = "0.1.0"
description = "FletImageGallerySaver control for Flet"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Flet contributors", email = "you@example.com" }
]
dependencies = [
    "flet>=0.28.2",
]

[project.urls]
Homepage = "https://mydomain.dev"
Documentation = "https://github.com/MyGithubAccount/flet-image-gallery-saver"
Repository = "https://github.com/MyGithubAccount/flet-image-gallery-saver"
Issues = "https://github.com/MyGithubAccount/flet-image-gallery-saver/issues"

[tool.setuptools.package-data]
"flutter.flet_image_gallery_saver" = ["**/*"]

[tool.uv]
dev-dependencies = [
    "flet[all]==0.28.2",
    "mkdocs", 
    "mkdocs-material",
    "mkdocstrings[python]"
]

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.28.2"}
mkdocs = "*"
mkdocstrings = { extras = ["python"], version = "*" }
mkdocs-material = "*"

[tool.setuptools]
license-files = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
